Bug 304253 - The «bounce» cursor effect when starting a program is not bouncing anymore
Summary: The «bounce» cursor effect when starting a program is not bouncing anymore
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 4.9.0
Platform: unspecified Linux
: NOR normal
Target Milestone: 4.11
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/111...
Keywords:
: 304509 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-07-29 20:03 UTC by Romain D.
Modified: 2013-08-02 20:30 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments
re-fix bouncannoyance (1.24 KB, patch)
2013-07-26 12:13 UTC, Thomas Lübking
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Romain D. 2012-07-29 20:03:04 UTC
Encountered after update from 4.8

Reproducible: Always

Steps to Reproduce:
1. Start a GUI program from the appmenu or any launcher
2. Cursor effect should show the program icon bouncing
3. program icon is somewhat moving but not vertically anymore (getting distorted but not jumping)



This happened btw 4.8 and 4.9.0, comments on IRC says it works well with a new profile but the major update from 4.8 to 4.9 might be broken.
Comment 1 Martin Flöser 2012-07-29 20:10:12 UTC
I can confirm.
Comment 2 Thomas Lübking 2012-07-29 20:52:56 UTC
Bleh. I mean "blast".
I can see why.
Comment 3 Thomas Lübking 2012-07-29 21:10:06 UTC
https://git.reviewboard.kde.org/r/105786/
Comment 4 Thomas Lübking 2012-08-03 22:59:32 UTC
*** Bug 304509 has been marked as a duplicate of this bug. ***
Comment 5 Thomas Lübking 2012-08-11 20:34:34 UTC
Git commit 78ec5108a8b7c4e3477e061fd0f1750c5028ec48 by Thomas Lübking.
Committed on 08/08/2012 at 19:51.
Pushed by luebking into branch 'KDE/4.9'.

ensure the feedbackRect is always up-to-date
REVIEW: 105786
FIXED-IN: 4.9.1

M  +3    -1    kwin/effects/startupfeedback/startupfeedback.cpp

http://commits.kde.org/kde-workspace/78ec5108a8b7c4e3477e061fd0f1750c5028ec48
Comment 6 Wolfgang Bauer 2013-07-26 11:04:36 UTC
This bug reappeared on my system after upgrading to KDE 4.11 RC2 (4.10.97).
This worked fine up to and including RC1 (4.10.95).
Comment 7 Thomas Lübking 2013-07-26 12:13:13 UTC
Created attachment 81358 [details]
re-fix bouncannoyance

Luckily it's now simpler to fix.
While the fix is a partial reversion of the other fix.

Tested all three annoyances - bounce jumps happily around, blink (and again: really?) switches between a black and white rect (why?) and passive is just the icon attached and i can't trigger glitches.

Tested on https://git.reviewboard.kde.org/r/111693/ for "smoother" icon following.
Comment 8 Wolfgang Bauer 2013-07-26 13:34:08 UTC
(In reply to comment #7)
> Created attachment 81358 [details]
> re-fix bouncannoyance
That patch fixes the bouncing cursor for me.
Thanks for the fast response.

Haven't tried that reviewboard patch yet, though.
Comment 9 Thomas Lübking 2013-08-02 20:30:11 UTC
Git commit b1dbf465d0ce4965390977a0e760823580fd8572 by Thomas Lübking.
Committed on 26/07/2013 at 12:09.
Pushed by luebking into branch 'KDE/4.11'.

re-fix bouncing startup feedback
FIXED-IN: 4.11
REVIEW: 111729

M  +3    -1    kwin/effects/startupfeedback/startupfeedback.cpp

http://commits.kde.org/kde-workspace/b1dbf465d0ce4965390977a0e760823580fd8572