re-fix bouncing startup feedback

BUG: 304253
FIXED-IN: 4.11
REVIEW: 111729